Fixed spacing issues in checking answers.
A number of things needed fixing, and a review comment tipped me off to fixing them. Firstly, I reduced the spacing between the new material textarea and the save button. Not displaying the error text by default (before, it was simply hiding it). And using ::ng-deep to remove the form-field bottom padding.

At that point I noticed the .answer-select-text tab had spacing issues and generally needed cleanup. I consolidated the two places in scss that were controlling it. I made the default height match the audio tab for a much cleaner look when swtiching between tabs. I also centered the error-text and the select-verses items.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-answers/checking-answers.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-answers/checking-answers.component.scss
@@ -56,7 +56,7 @@
 
 #answer-form {
   .answer-tab {
-    padding: 10px 0;
+    margin: 10px 0;
     display: flex;
     align-items: center;
     &.answer-record-upload {
@@ -66,10 +66,18 @@
     }
     &.answer-select-text {
       color: var(--mdc-theme-primary);
-      align-items: flex-start;
-      .buttons-wrapper {
-        display: flex;
-        align-items: center;
+      justify-content: center;
+      column-gap: 10px;
+      min-height: 75px;
+      &.text-selected {
+        flex-direction: column;
+      }
+      .scripture-text-blank,
+      .scripture-text {
+        margin: 0;
+      }
+      .scripture-text {
+        align-self: flex-start;
       }
       .scripture-text-blank {
         font-style: italic;
@@ -86,12 +94,16 @@
     color: var(--mdc-theme-error);
     font-size: 0.75em;
     padding-left: 15px;
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
     font-weight: 400;
     letter-spacing: 0.03333333em;
+    text-align: center;
     &:not(.visible) {
-      visibility: hidden;
+      display: none;
     }
+  }
+  ::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 0px;
   }
   .form-actions {
     display: flex;
@@ -106,23 +118,6 @@
   }
   ::ng-deep .mat-ink-bar {
     background-color: var(--mdc-theme-primary);
-  }
-}
-
-.answer-select-text {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  &.text-selected {
-    flex-direction: column;
-  }
-  .buttons-wrapper {
-    align-self: flex-end;
-    flex-shrink: 0;
-  }
-  .scripture-text-blank,
-  .scripture-text {
-    margin: 0;
   }
 }
 
